# SATC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: BPlusTree.h  dac.hpp  dac_helper.hpp  file_util.hpp  repair.hpp  repair_sampling.hpp  repair_sampling_offsets.hpp  repair_sampling_offsets_helper.hpp  split_repair_helper.hpp
src/: access.cpp  access_dac.cpp  build.cpp  build_dac.cpp  build_dac_directory.cpp  build_directory.cpp  compress.cpp  decompress.cpp  extremes.cpp  extremes_dac.cpp  main.cpp  similarity.cpp  similarity_dac.cpp  similarity_extract.cpp  similarity_levels.cpp  similarity_opt.cpp  statistics.cpp  times.cpp
test/: test.cpp  test_offsets.cpp  vector_generator.cpp
